--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,13 @@
 /.idea
 /.build
 /vendor
+/composer.lock
 .DS_Store
 kphp_out
 .phpunit.result.cache
 .env
 
-/tests/**/testrun.neon
+/tests/php/**/testrun.neon
 /phpstan.neon
 
 
