--- a/composer.json
+++ b/composer.json
@@ -5,9 +5,7 @@
   "type": "phpstan-extension",
   "require": {
     "php": "^7.4 || ^8.0",
-    "phpstan/phpstan": "^1.8",
-    "symfony/polyfill-php80": "^v1.27.0",
-    "symfony/yaml": "^5.4 || ^6.0"
+    "phpstan/phpstan": "^1.8"
   },
   "require-dev": {
     "phpstan/phpstan-phpunit": "^1.2",
